[gd_scene load_steps=7 format=3 uid="uid://bo2gd4sehdugm"]

[ext_resource type="Script" uid="uid://y88qplkioj1q" path="res://scenes/globals/pause/pause_overlay.gd" id="1_lf64b"]
[ext_resource type="Texture2D" uid="uid://bvlx57seuur65" path="res://assets/first_party/intro/background.png" id="2_1tcw0"]
[ext_resource type="Theme" uid="uid://cvitou84ni7qe" path="res://scenes/ui_elements/components/theme.tres" id="2_sd5t1"]
[ext_resource type="PackedScene" uid="uid://dkeb0yjgcfi86" path="res://scenes/menus/options/options.tscn" id="3_sd5t1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ai8ue"]
texture = ExtResource("2_1tcw0")
modulate_color = Color(1, 1, 1, 0.498039)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1tcw0"]

[node name="PauseOverlay" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_lf64b")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ai8ue")

[node name="TabContainer" type="TabContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -237.0
offset_top = -183.0
offset_right = 237.0
offset_bottom = 183.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_1tcw0")
current_tab = 0
tabs_visible = false

[node name="PauseMenu" type="PanelContainer" parent="TabContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_sd5t1")
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/PauseMenu"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="TabContainer/PauseMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"PlayerRibbon"

[node name="Label" type="Label" parent="TabContainer/PauseMenu/VBoxContainer/PanelContainer"]
layout_mode = 2
text = "Game Paused"

[node name="ResumeButton" type="Button" parent="TabContainer/PauseMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"FlatButton"
text = "Resume"

[node name="AbandonQuestButton" type="Button" parent="TabContainer/PauseMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"FlatButton"
text = "Abandon Quest"

[node name="OptionsButton" type="Button" parent="TabContainer/PauseMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"FlatButton"
text = "Options"

[node name="TitleScreenButton" type="Button" parent="TabContainer/PauseMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"FlatButton"
text = "Exit to Title"

[node name="Options" parent="TabContainer" instance=ExtResource("3_sd5t1")]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 2

[connection signal="pressed" from="TabContainer/PauseMenu/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="TabContainer/PauseMenu/VBoxContainer/AbandonQuestButton" to="." method="_on_abandon_quest_pressed"]
[connection signal="pressed" from="TabContainer/PauseMenu/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="TabContainer/PauseMenu/VBoxContainer/TitleScreenButton" to="." method="_on_title_screen_button_pressed"]
[connection signal="back" from="TabContainer/Options" to="." method="_on_options_back"]
